syntax = "proto3";

option go_package = "github.com/Darkhunter9/lazIR_tag/src/proto";

package lazIR_tag;

service Score {
    rpc AddRecord(AddRecordRequest) returns (AddRecordResponse) {}
    rpc GetRecord(GetRecordRequest) returns (GetRecordResponse) {}

}

message AddRecordRequest {
    string shooter = 1;
    string victim = 2;
}

message AddRecordResponse {
    uint64 commit_index = 1;
}

message GetRecordRequest {
}

message GetRecordResponse {
    uint64 read_at_index = 1;
    map<string, int32> score = 2;
}